@@ -38,6 +38,7 @@ class Fldtk_Script_Editor : public Fldtk_Editor
 public:
 	Fldtk_Script_Editor(const char *L=0L);
 	virtual ~Fldtk_Script_Editor();
+	virtual int loadFile(const char*);
 };
 
 
